GCE-37037 fixed dash spacing

--- a/src/sales/hosting/website-builder/styles.css
+++ b/src/sales/hosting/website-builder/styles.css
@@ -6,7 +6,10 @@
     background-color: #d9d9d9;
 }
 .dash{
-  letter-spacing: -.5rem;
+  letter-spacing: -0.5rem;
+}
+#features .dash {
+  letter-spacing: -1.5rem;
 }
 .BVBrowserWebkit{
   margin-top:  50px;
